# DOA

./: .gitignore
Noter/Lektion_6/: InsertionSort.cpp  Noter.md
Tidligere eksamenssæt/: Fall 2024.md  January2022.md  January2022_kode.cpp  Summer 2024.md
Week_01/: CMakeLists.txt
Week_01/basic_compilation/1-single_file/: main.cpp
Week_01/basic_compilation/2-main_with_library/: hello.cpp
Week_01/basic_compilation/3-main_with_class_v1/: hello.h
Week_01/basic_compilation/3-main_with_class_v2/: hello.cpp  hello.h
Week_01/iterator/: main.cpp
Week_01/pointers/: pointers.cpp
Week_01/references/: main.cpp
Week_01/templates/: main.cpp  pair.h
Week_02/: hand_in.docx
Week_02/Week_02/list/: simple_list.h
Week_02/Week_02/point/: point.h  point_plus.h
Week_02/Week_02/point_inheritance/: point.h  pointimpl.h
Week_02/Week_02/program_analysis/: count.c  runtime_test.cpp
Week_06/: Week5+6.md  main.cpp
cpp_exercises_template/Testmiljoe/: Makefile  linked_list.h  main.cpp  main.out
cpp_exercises_template/cpp_exercises_template/: CMakeLists.txt
cpp_exercises_template/cpp_exercises_template/projects/week1/opgave1/src/: main.cpp
cpp_exercises_template/cpp_exercises_template/projects/week1/opgave2/include/: implementation.h  maxheap.h
cpp_exercises_template/cpp_exercises_template/projects/week1/opgave2/src/: implementation.cpp  main.cpp
cpp_exercises_template/cpp_exercises_template/projects/week2/opgave1/include/: book.h  library.h
cpp_exercises_template/cpp_exercises_template/projects/week2/opgave1/src/: book.cpp  library.cpp  main.cpp  main74.cpp
cpp_exercises_template/cpp_exercises_template/projects/week3/opgave1/include/: simple_list.h  simple_list.tpp  tests.h
cpp_exercises_template/cpp_exercises_template/projects/week3/opgave1/src/: main.cpp  tests.cpp
cpp_exercises_template/cpp_exercises_template/projects/week3/opgave2/include/: stack_class.h
cpp_exercises_template/cpp_exercises_template/projects/week3/opgave2/src/: main.cpp
cpp_exercises_template/cpp_exercises_template/projects/week3/opgave3/include/: queue_class.h
cpp_exercises_template/cpp_exercises_template/projects/week3/opgave3/src/: test_queue_class.cpp
cpp_exercises_template/cpp_exercises_template/projects/week4/: Opgave4.md  Opgave7.md
